Update Materialize IoT demo

--- a/mz-raspberry-pi-temperature/docker-compose.yaml
+++ b/mz-raspberry-pi-temperature/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3.7'
 services:
   materialized:
-    image: materialize/materialized:v0.9.13
+    image: materialize/materialized:v0.15.0
     container_name: materialized
     init: true
     command: -w1 --disable-telemetry --experimental
@@ -43,7 +43,7 @@ services:
     volumes:
      - ${PWD}/postgres-image:/docker-entrypoint-initdb.d
   metabase:
-    image: materialize/metabase:v0.0.5
+    image: metabase/metabase
     container_name: metabase
     depends_on:
        - materialized
