Enable trades load generator for demo

--- a/laravel-eventstreams/docker-compose.yml
+++ b/laravel-eventstreams/docker-compose.yml
@@ -123,6 +123,14 @@ services:
     networks:
       - eventstream
 
+  tradesgen:
+    build: loadgen
+    container_name: tradesgen
+    depends_on:
+      - app
+    networks:
+      - eventstream
+
 networks:
   eventstream:
     driver: bridge
